--- a/src/routes/contact/contact.css
+++ b/src/routes/contact/contact.css
@@ -5,3 +5,19 @@ article {
   box-shadow: 1px 1px 5px rgba(0,0,0,0.05);
   margin: 10px;
 }
+
+/* form styles */
+form {
+  margin-top: 20px;
+}
+input, textarea {
+  display: block;
+  width: 400px;
+  padding: 5px;
+  margin: 10px 0 20px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+textarea {
+  height: 100px;
+}
