--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -33,3 +33,20 @@ footer {
   border-radius: 4px;
   cursor: pointer;
 }
+
+/* prop variations */
+/* variations */
+.lg .modal-content {
+  width: 800px;
+}
+.sm .modal-content {
+  width: 400px;
+}
+.frosted .modal-content {
+  background-color: rgba(255,255,255,0.5);
+  backdrop-filter: blur(5px);
+  border: 2px solid white;
+}
+.frosted.modal {
+  background-color: rgba(0,0,0,0.2);
+}
